syntax = "proto3";

package go.micro.srv.authCenter;

service AuthCenter {
	rpc VerifyWechatCode(VerifyWechatCodeRequest) returns (VerifyWechatCodeResponse) {}
	rpc GetJWTToken(GetJWTTokenRequest) returns (GetJWTTokenResponse) {}
}

message VerifyWechatCodeRequest {
	string code = 1;
}

message VerifyWechatCodeResponse {
	string openID = 1;
	string sessionKey = 2;
	string unionID = 3;
}

message GetJWTTokenRequest {
	string userID = 1;
}

message GetJWTTokenResponse {
	string token = 1;
}
